# rgbayes

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/rgbayes/: __init__.py  rgbayes.py
tests/: test_rgbayes.py
